--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -919,7 +919,7 @@
 \ExplSyntaxOff
 \sii {34} t f\\
 \stie{ab}{ab }tf\\
-\tiny\stss { 1 { 2 3 } { 4 \\ 5 } \\[1ex] @{asdf} } \sstt
+\tiny\stss { 1 {23} { 4 \\ 5 } \\[1ex] @{asdf} } \sstt
 \ExplSyntaxOn
 aa\tl_to_str:N\sstt zz
 \end{document}
