--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -96,7 +96,7 @@
 \tl_new:N   \subfiglist_tempb_tl
 
 \seq_new:N  \subfiglist_spec_str_seq
-\seq_new:N  \subfiglist_spec_token_seq
+\seq_new:N  \subfiglist_spec_tokens_seq
 
 \int_new:N  \subfiglist_exit_count_int
 \int_new:N  \subfiglist_canvas_int
@@ -419,6 +419,9 @@
 %%%   Define messages   %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\msg_new:nnn { subfiglist } { internal~error }
+  { Internal~error:~#1 }
+
 \msg_new:nnn { subfiglist } { parser~error }
   { Error~while~parsing~the~argument~of~`subfiglist'~environment:~Unexpected~token~`#1' }
 
@@ -492,6 +495,7 @@
 \cs_generate_variant:Nn \fp_add:Nn                { Nf }
 \cs_generate_variant:Nn \fp_sub:Nn                { Nf }
 \cs_generate_variant:Nn \tl_put_right:Nn          { Nf }
+\cs_generate_variant:Nn \tl_if_single:NTF         { V }
 \cs_generate_variant:Nn \msg_error:nnn            { nnf }
 \cs_generate_variant:Nn \msg_error:nnnn           { nnnf }
 \cs_generate_variant:Nn \msg_error:nnnn           { nnfn }
@@ -527,10 +531,17 @@
 
 \cs_new:Npn \subfiglist_exp_args:NNt #1 #2 #3
 {
-  \exp_args:NNNo \exp_args:NNo #1 { #2 } { #3 }
+  \exp_args:NNNo \exp_args:NNo #1 #2 { #3 }
 }
 
 \cs_generate_variant:Nn \subfiglist_exp_args:NNt { c }
+
+\cs_new:Npn \subfiglist_exp_args:Nnt #1 #2 #3
+{
+  \exp_args:NNno \exp_args:Nno #1 { #2 } { #3 }
+}
+
+\cs_generate_variant:Nn \subfiglist_exp_args:Nnt { c }
 
 \cs_new:Npn \subfiglist_exp_args:Ntt #1 #2 #3
 {
@@ -827,7 +838,7 @@
   % expanding its arguments twice
   \cs_new:cpn { subfiglist_tl_ #1 _p:nt } ##1 ##2
   {
-    \subfiglist_exp_args:cNt { subfiglist_tl_ #1 _p:nn } { ##1 } { ##2 }
+    \subfiglist_exp_args:cnt { subfiglist_tl_ #1 _p:nn } { ##1 } { ##2 }
   }
   \cs_new:cpn { subfiglist_tl_ #1 _p:tn } ##1 ##2
   {
@@ -839,7 +850,7 @@
   }
   \cs_new:cpn { subfiglist_tl_ #1 :ntT } ##1 ##2 ##3
   {
-    \subfiglist_exp_args:cNt { subfiglist_tl_ #1 :nnT } { ##1 } { ##2 } { ##3 }
+    \subfiglist_exp_args:cnt { subfiglist_tl_ #1 :nnT } { ##1 } { ##2 } { ##3 }
   }
   \cs_new:cpn { subfiglist_tl_ #1 :tnT } ##1 ##2 ##3
   {
@@ -851,7 +862,7 @@
   }
   \cs_new:cpn { subfiglist_tl_ #1 :ntF } ##1 ##2 ##3
   {
-    \subfiglist_exp_args:cNt { subfiglist_tl_ #1 :nnF } { ##1 } { ##2 } { ##3 }
+    \subfiglist_exp_args:cnt { subfiglist_tl_ #1 :nnF } { ##1 } { ##2 } { ##3 }
   }
   \cs_new:cpn { subfiglist_tl_ #1 :tnF } ##1 ##2 ##3
   {
@@ -863,7 +874,7 @@
   }
   \cs_new:cpn { subfiglist_tl_ #1 :ntTF } ##1 ##2 ##3 ##4
   {
-    \subfiglist_exp_args:cNt { subfiglist_tl_ #1 :nnTF } { ##1 } { ##2 } { ##3 } { ##4 }
+    \subfiglist_exp_args:cnt { subfiglist_tl_ #1 :nnTF } { ##1 } { ##2 } { ##3 } { ##4 }
   }
   \cs_new:cpn { subfiglist_tl_ #1 :tnTF } ##1 ##2 ##3 ##4
   {
@@ -1480,7 +1491,7 @@
       \seq_get_left:NN \subfiglist_spec_str_seq \subfiglist_tempa_tl
       
       \tl_map_inline:nn { { blank } { integer } { at } { newline } { subblock } { error } }
-      {%\show_meaning:V \subfiglist_tempa_tl\\
+      {
         \bool_if:nTF { \subfiglist_use:c { subfiglist_tokenize_is_ ##1 _p:V } \subfiglist_tempa_tl }
         {
           \subfiglist_use:c { subfiglist_tokenize_ ##1 :NN } \subfiglist_spec_str_seq #2
@@ -1493,6 +1504,102 @@
 }
 
 \cs_generate_variant:Nn \subfiglist_tokenize_spec_str:nN { VN }
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%   Specification string parser   %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\cs_new:Npn \subfiglist_parse_is_canvas_p:V #1
+%
+% #1: Token to be tested
+%
+{
+  \subfiglist_tl_if_eq_charcode_p:nf { canvas } { \tl_head:V #1 }
+}
+
+\prg_new_conditional:Npnn \subfiglist_parse_is_error:V #1 { p }
+%
+% #1: Token to be tested
+%
+{
+  \prg_return_true:
+}
+
+\cs_new:Npn \subfiglist_parse_canvas:NN #1 #2
+%
+% #1: Sequence containing tokenized specification string
+% #2: Token list variable for storing tokenized specification string
+%
+{
+  \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \subfiglist_parse_wrap_token:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
+  \tl_put_right:NV #2 \subfiglist_tempb_tl
+}
+
+\cs_new:Npn \subfiglist_parse_error:NN #1 #2
+{
+  \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \tl_set:Nn \subfiglist_tempb_tl { Parser~encountered~unexpected~token~` }
+  \tl_put_right:Nf \subfiglist_tempb_tl { \tl_head:V \subfiglist_tempa_tl }
+  \tl_put_right:Nn \subfiglist_tempb_tl { ' }
+  \msg_error:nnV { subfiglist } { internal~error } \subfiglist_tempb_tl
+}
+
+\cs_new:Npn \subfiglist_parse_wrap_token:Nn #1 #2
+%
+% #1: Token list variable to store token
+% #2: Token to be wrapped by one level of braces { }
+%
+{
+  \tl_set:Nn #1 { { #2 } }
+}
+
+\cs_generate_variant:Nn \subfiglist_parse_wrap_token:Nn { NV }
+
+\cs_new:Npn \subfiglist_parse_make_token:NnN #1 #2 #3
+%
+% #1: Token list variable to store token
+% #2: String for type of token
+% #3: Content of token
+%
+{
+  \tl_set:Nn #1 { { { #2 } { #3 } } }
+}
+
+% Parser for subfiglist specification
+\cs_new:Npn \subfiglist_parse_spec_tokens:nN #1 #2
+%
+% #1: Token list containing tokenized specification string
+% #2: Token list variable for storing parsed specification string
+%
+{
+  \group_begin:
+    \seq_clear:N \subfiglist_spec_tokens_seq
+    \tl_map_inline:nn { #1 }
+    {
+      \seq_put_right:Nn \subfiglist_spec_tokens_seq { ##1 }
+    }
+    
+    \bool_until_do:nn { \seq_if_empty_p:N \subfiglist_spec_tokens_seq }
+    {
+      \seq_get_left:NN \subfiglist_spec_tokens_seq \subfiglist_tempa_tl
+      
+      \tl_map_inline:nn { { canvas } { error } }
+      {
+        \bool_if:nTF { \subfiglist_use:c { subfiglist_parse_is_ ##1 _p:V } \subfiglist_tempa_tl }
+        {
+          \subfiglist_use:c { subfiglist_parse_ ##1 :NN } \subfiglist_spec_tokens_seq #2
+          \tl_map_break:
+        }
+      }
+    }
+  \subfiglist_group_var_return:NN \tl_set:Nn #2
+  \group_end:
+}
+
+\cs_generate_variant:Nn \subfiglist_parse_spec_tokens:nN { VN }
 
 
 
