--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@ TODO
 * Replace test for equal charcode by test for equal charcode AND equal meaning
 * Add change of meaning for `@' depending on catcode to known issues. Weird settings of catcodes e.g. for numbers may have strange effects
 * Remove \subfiglist_test_conditionals:
+* \subfiglist_tokenize_spec_str:VN -> \subfiglist_tokenize_spec_str:NV
 
 
 
