--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -921,7 +921,7 @@
 \ExplSyntaxOff
 %\sii {34} t f\\
 %\stie{ab}{ab }tf\\
-\stss { 1 {23} { 4 \\ 5 } \\[1ex] @{asdf} } \sstt
+\stss { 1 @{asdf} {23} { 4 \\ 5 } \\[1ex] 7 } \sstt
 \spst \sstt \sst
 \ExplSyntaxOn
 \tl_show:N\sst\error
