Added production rule for breakup into lines for subfiglist specification parser.

--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -46,6 +46,7 @@
 
 \tl_new:N   \subfiglist_spec_tl
 \tl_new:N   \subfiglist_spec_token_tl
+\tl_new:N   \subfiglist_spec_current_line_tl
 \tl_new:N   \subfiglist_spec_nums_tl
 \tl_new:N   \subfiglist_spec_nums_sorted_tl
 
@@ -1560,6 +1561,19 @@
   \subfiglist_tl_if_eq_charcode_p:nf { subblock } { \tl_head:V #1 }
 }
 
+\cs_new:Npn \subfiglist_parse_is_line_p:V #1
+%
+% #1: Token to be tested
+%
+{
+  \bool_lazy_any_p:n
+  {
+    { \subfiglist_parse_is_canvas_p:V #1 }
+    { \subfiglist_parse_is_separator_p:V #1 }
+    { \subfiglist_parse_is_subblock_p:V #1 }
+  }
+}
+
 \prg_new_conditional:Npnn \subfiglist_parse_is_error:V #1 { p }
 %
 % #1: Token to be tested
@@ -1632,6 +1646,59 @@
   \tl_put_right:NV #2 \subfiglist_tempa_tl
 }
 
+% Parser for lines
+\cs_new:Npn \subfiglist_parse_line:NN #1 #2
+%
+% #1: Sequence containing tokenized specification string
+% #2: Token list variable for storing tokenized specification string
+%
+{
+  \seq_get_left:NN \subfiglist_spec_tokens_seq \subfiglist_tempa_tl
+  \tl_clear:N \subfiglist_tempb_tl
+
+  \bool_until_do:nn
+  {
+    \bool_lazy_or_p:nn
+      { \quark_if_no_value_p:N \subfiglist_tempa_tl }
+      { ! \subfiglist_parse_is_line_p:V \subfiglist_tempa_tl }
+  }{
+    \seq_pop_left:NN \subfiglist_spec_tokens_seq \subfiglist_tempa_tl
+    \subfiglist_parse_wrap_token:NV \subfiglist_tempa_tl \subfiglist_tempa_tl
+    \tl_put_right:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
+    \seq_get_left:NN \subfiglist_spec_tokens_seq \subfiglist_tempa_tl
+  }
+  
+  \tl_set_eq:NN \subfiglist_tempa_tl #2
+  \group_begin:
+    \tl_clear:N #2
+    \seq_clear:N \subfiglist_spec_tokens_seq
+    \tl_map_inline:Nn \subfiglist_tempb_tl
+    {
+      \seq_put_right:Nn \subfiglist_spec_tokens_seq { ##1 }
+    }
+    
+    \bool_until_do:nn { \seq_if_empty_p:N \subfiglist_spec_tokens_seq }
+    {
+      \seq_get_left:NN \subfiglist_spec_tokens_seq \subfiglist_tempa_tl
+      
+      \tl_map_inline:nn { { canvas } { separator } { subblock } { error } }
+      {
+        \bool_if:nT { \subfiglist_use:c { subfiglist_parse_is_ ##1 _p:V } \subfiglist_tempa_tl }
+        {
+          \subfiglist_use:c { subfiglist_parse_ ##1 :NN } \subfiglist_spec_tokens_seq #2
+          \tl_map_break:
+        }
+      }
+    }
+    
+  \subfiglist_group_var_return:NN \tl_set:Nn #2
+  \group_end:
+
+  \subfiglist_parse_make_token:NnV \subfiglist_tempb_tl { line } #2
+  \tl_put_right:NV \subfiglist_tempa_tl \subfiglist_tempb_tl
+  \tl_set_eq:NN #2 \subfiglist_tempa_tl
+}
+
 \cs_new:Npn \subfiglist_parse_error:NN #1 #2
 {
   \seq_pop_left:NN #1 \subfiglist_tempa_tl
@@ -1682,7 +1749,7 @@
     {
       \seq_get_left:NN \subfiglist_spec_tokens_seq \subfiglist_tempa_tl
       
-      \tl_map_inline:nn { { canvas } { separator } { newline } { subblock } { error } }
+      \tl_map_inline:nn { { line } { newline } { error } }
       {
         \bool_if:nT { \subfiglist_use:c { subfiglist_parse_is_ ##1 _p:V } \subfiglist_tempa_tl }
         {
