--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -918,6 +918,7 @@
 %\def\stie{\subfiglist_tl_if_eq:nnTF}
 \tl_new:N \sstt %\subfiglist_spec_token_tl
 \tl_new:N \sst %\subfiglist_spec_tl
+\tl_new:N \subfiglist_tempc_tl
 \ExplSyntaxOff
 %\sii {34} t f\\
 %\stie{ab}{ab }tf\\
