--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -47,8 +47,8 @@
 \tl_new:N   \subfiglist_spec_tl
 \tl_new:N   \subfiglist_spec_token_tl
 \tl_new:N   \subfiglist_spec_current_line_tl
-\tl_new:N   \subfiglist_spec_nums_tl
-\tl_new:N   \subfiglist_spec_nums_sorted_tl
+\tl_new:N   \subfiglist_spec_canvas_nums_tl
+\tl_new:N   \subfiglist_spec_canvas_nums_sorted_tl
 
 \tl_new:N   \subfiglist_canvas_nums_tl
 \tl_new:N   \subfiglist_canvas_nums_sorted_tl
@@ -100,7 +100,7 @@
 \seq_new:N  \subfiglist_spec_tokens_seq
 
 \int_new:N  \subfiglist_exit_count_int
-\int_new:N  \subfiglist_canvas_int
+\int_new:N  \subfiglist_canvas_count_int
 \int_new:N  \subfiglist_tl_if_eq_charcode_int
 \int_new:N  \subfiglist_keyval_choice_first_int
 \int_new:N  \subfiglist_tempa_int
@@ -916,6 +916,20 @@
   \cs_generate_variant:cn { subfiglist_tl_ #1 :nnTF } { nf }
   \cs_generate_variant:cn { subfiglist_tl_ #1 :nnTF } { fn }
   \cs_generate_variant:cn { subfiglist_tl_ #1 :nnTF } { ff }
+  % Define variants of \subfiglist_tl_if_eq_charcode/\subfiglist_tl_if_eq
+  % getting variable value
+  \cs_generate_variant:cn { subfiglist_tl_ #1 _p:nn } { nV }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 _p:nn } { Vn }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 _p:nn } { VV }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnT }  { nV }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnT }  { Vn }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnT }  { VV }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnF }  { nV }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnF }  { Vn }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnF }  { VV }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnTF } { nV }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnTF } { Vn }
+  \cs_generate_variant:cn { subfiglist_tl_ #1 :nnTF } { VV }
 }
 
 
@@ -1374,6 +1388,9 @@
 %
 {
   \seq_pop_left:NN #1 \subfiglist_tempa_tl
+  \subfiglist_tokenize_wrap_token:NV \subfiglist_tempb_tl \subfiglist_tempa_tl
+  \tl_put_right:NV \subfiglist_spec_canvas_nums_tl \subfiglist_tempb_tl
+  
   \subfiglist_tokenize_make_token:NnV \subfiglist_tempb_tl { canvas } \subfiglist_tempa_tl
   \tl_put_right:NV #2 \subfiglist_tempb_tl
 }
@@ -1464,6 +1481,7 @@
     \subfiglist_tokenize_spec_str:VN \subfiglist_tempa_tl #2
     \subfiglist_tokenize_make_token:NnV \subfiglist_tempa_tl { subblock } #2
     \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_tempa_tl
+    \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_spec_canvas_nums_tl
   \group_end:
   \tl_put_right:NV #2 \subfiglist_tempa_tl
 }
@@ -1477,6 +1495,17 @@
   \seq_pop_left:NN #1 \subfiglist_tempa_tl
   \msg_error:nnV { subfiglist } { parser~error } \subfiglist_tempa_tl
 }
+
+\cs_new:Npn \subfiglist_tokenize_wrap_token:Nn #1 #2
+%
+% #1: Token list variable to store token
+% #2: Token to be wrapped by one level of braces { }
+%
+{
+  \tl_set:Nn #1 { { #2 } }
+}
+
+\cs_generate_variant:Nn \subfiglist_tokenize_wrap_token:Nn { NV }
 
 \cs_new:Npn \subfiglist_tokenize_make_token:NnN #1 #2 #3
 %
@@ -1518,6 +1547,7 @@
       }
     }
   \subfiglist_group_var_return:NN \tl_set:Nn #2
+  \subfiglist_group_var_return:NN \tl_set:Nn \subfiglist_spec_canvas_nums_tl
   \group_end:
 }
 
@@ -1763,6 +1793,59 @@
 }
 
 \cs_generate_variant:Nn \subfiglist_parse_spec_tokens:nN { VN }
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%   Verify canvas numbers   %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Check if image numbers given in subfiglist specification are valid
+\cs_new:Npn \subfiglist_verify_spec_canvas_nums:NNN #1 #2 #3
+%
+% #1: Variable containing canvas numbers
+% #2: Variable to store sorted canvas numbers
+% #3: Variable to store total number of canvases
+%
+{
+  % Sort detected image numbers
+  \tl_set_eq:NN #2 #1
+  \tl_sort:Nn #2
+  {
+    \int_compare:nTF { ##1 > ##2 }
+      { \sort_reversed: }
+      { \sort_ordered: }
+  }
+  
+  % Check if some image number is missing
+  \int_zero:N \subfiglist_tempa_int
+  \tl_map_inline:Nn #2
+  {
+    \int_incr:N \subfiglist_tempa_int
+    
+    \int_compare:nF { ##1 = \subfiglist_tempa_int }
+    {
+      \int_compare:nTF { ##1 > \subfiglist_tempa_int }
+      {
+        \msg_error:nnV { subfiglist } { missing~identifier } \subfiglist_tempa_int
+        \tl_map_break:
+      }{
+        \msg_error:nnn { subfiglist } { double~identifier } { ##1 }
+        \tl_map_break:
+      }
+    }
+  }
+  
+  % Save total number of images
+  \int_set_eq:NN #3 \subfiglist_tempa_int
+  
+  % Check if image numbers in subfiglist specification
+  % are in ascending order and warn if otherwise
+  \subfiglist_tl_if_eq:VVF #1 #2
+  {
+    \msg_warning:nn { subfiglist } { wrong~image~order }
+  }
+}
 
 
 
@@ -2536,7 +2619,7 @@
             {
               % Store numbers/raise error on non-numbers
               \subfiglist_is_integer:nTF { #1 }
-              { \tl_put_right:Nn \subfiglist_spec_nums_tl { {#1} } }
+              { \tl_put_right:Nn \subfiglist_spec_canvas_nums_tl { {#1} } }
               {
                 \msg_error:nnn { subfiglist } { parser-error }
                   { Found~non-numerical~token~`#1'. }
@@ -2544,7 +2627,7 @@
             }{
               % Deal with composed tokens
               \subfiglist_is_integer:nTF { #1 }
-                { \tl_put_right:Nn \subfiglist_spec_nums_tl { {#1} } }
+                { \tl_put_right:Nn \subfiglist_spec_canvas_nums_tl { {#1} } }
                 { \subfiglist_parse_nums:n { #1 } }
             }
           }
@@ -3215,57 +3298,6 @@
 }
 
 
-% Check if image numbers are valid
-\cs_new:Npn \subfiglist_test_spec_nums:
-{
-  \group_begin:
-  
-  % Sort detected image numbers
-  \tl_set_eq:NN \subfiglist_spec_nums_sorted_tl \subfiglist_spec_nums_tl
-  \tl_sort:Nn \subfiglist_spec_nums_sorted_tl
-  {
-    \int_compare:nTF { ##1 > ##2 }
-      { \sort_reversed: }
-      { \sort_ordered: }
-  }
-  
-  % Check if some image number is missing
-  \int_zero:N \subfiglist_tempa_int
-  \tl_map_inline:Nn \subfiglist_spec_nums_sorted_tl
-  {
-    \int_incr:N \subfiglist_tempa_int
-    
-    \int_compare:nF { ##1 = \subfiglist_tempa_int }
-    {
-      \int_compare:nTF { ##1 > \subfiglist_tempa_int }
-      {
-        \msg_error:nnf { subfiglist } { missing~identifier }
-          { \int_use:N \subfiglist_tempa_int }
-        \tl_map_break:
-      }{
-        \msg_error:nnn { subfiglist } { double~identifier }
-          { ##1 }
-        \tl_map_break:
-      }
-    }
-  }
-  
-  % Save total number of images
-  \int_set_eq:NN \subfiglist_canvas_int \subfiglist_tempa_int
-  
-  % Check if image numbers in subfiglist specification
-  % are in ascending order and warn if otherwise
-  \subfiglist_tl_if_eq:nnF \subfiglist_spec_nums_tl \subfiglist_spec_nums_sorted_tl
-  {
-    \msg_warning:nn { subfiglist } { wrong~image~order }
-  }
-
-  % Export local variables with group scope
-  \subfiglist_group_var_return:NN \int_set:Nn \subfiglist_canvas_int  
-  \group_end:
-}
-
-
 % Check if canvas numbers are valid
 \cs_new:Npn \subfiglist_test_canvas_nums:
 {
@@ -3282,7 +3314,7 @@
   
   % Are there as many spec numbers as canvases?
   \int_compare:nF
-  { \tl_count:N \subfiglist_spec_nums_tl = \tl_count:N \subfiglist_canvas_nums_tl }
+  { \tl_count:N \subfiglist_spec_canvas_nums_tl = \tl_count:N \subfiglist_canvas_nums_tl }
   {
     \msg_error:nn { subfiglist } { number-mismatch }
   }
@@ -3309,7 +3341,7 @@
   }
   
   % Check if spec numbers and canvases are in same order
-  \subfiglist_tl_if_eq:nnF \subfiglist_spec_nums_tl \subfiglist_canvas_nums_tl
+  \subfiglist_tl_if_eq:nnF \subfiglist_spec_canvas_nums_tl \subfiglist_canvas_nums_tl
   {
     \msg_warning:nn { subfiglist } { mismatching~image~order }
   }
@@ -3339,10 +3371,10 @@
   }
 
   % Check if first argument is in range
-  \int_compare:nTF { #2 > \subfiglist_canvas_int }
+  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
   {
     \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #2 } { \int_use:N \subfiglist_canvas_int }
+      { #2 } { \int_use:N \subfiglist_canvas_count_int }
   }{
     % Process opitonal arguments
     \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistfile }
@@ -3390,10 +3422,10 @@
   }
 
   % Check if first argument is in range
-  \int_compare:nTF { #2 > \subfiglist_canvas_int }
+  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
   {
     \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #2 } { \int_use:N \subfiglist_canvas_int }
+      { #2 } { \int_use:N \subfiglist_canvas_count_int }
   }{
     % Process opitonal arguments
     \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistdummyfile }
@@ -3448,10 +3480,10 @@
   }
 
   % Check if first argument is in range
-  \int_compare:nTF { #2 > \subfiglist_canvas_int }
+  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
   {
     \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #2 } { \int_use:N \subfiglist_canvas_int }
+      { #2 } { \int_use:N \subfiglist_canvas_count_int }
   }{
     % Process opitonal arguments
     \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistdummy }
@@ -3499,10 +3531,10 @@
   }
 
   % Check if fourth argument is in range
-  \int_compare:nTF { #2 > \subfiglist_canvas_int }
+  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
   {
     \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #2 } { \int_use:N \subfiglist_canvas_int }
+      { #2 } { \int_use:N \subfiglist_canvas_count_int }
   }{
     % Process opitonal arguments
     \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistfile }
@@ -3558,10 +3590,10 @@
   }
 
   % Check if first argument is in range
-  \int_compare:nTF { #1 > \subfiglist_canvas_int }
+  \int_compare:nTF { #1 > \subfiglist_canvas_count_int }
   {
     \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #1 } { \int_use:N \subfiglist_canvas_int }
+      { #1 } { \int_use:N \subfiglist_canvas_count_int }
   }{
     % Save image number and content
     \tl_put_left:Nn \subfiglist_overlay_nums_tl    { {#1} }
@@ -3644,14 +3676,21 @@
 
   % Save subfiglist specification
   %\tl_set:Nn \subfiglist_spec_tl { #3 }
+  \tl_clear:N \subfiglist_spec_canvas_nums_tl
   \seq_clear:N \subfiglist_spec_token_seq
   \subfiglist_tokenize_spec_str:nN { #3 } \subfiglist_spec_token_tl
+  
+  % Verify canvas numbers
+  \subfiglist_verify_spec_canvas_nums:NNN
+    \subfiglist_spec_canvas_nums_tl
+    \subfiglist_spec_canvas_nums_sorted_tl
+    \subfiglist_canvas_count_int
     
-  % Parse subfiglist specification to get image numbers
+ % Parse subfiglist specification to get image numbers
   \subfiglist_parse_nums:N \subfiglist_spec_tl
   
   % Check if image numbers are valid
-  \subfiglist_test_spec_nums:
+  %\subfiglist_test_spec_nums:
   
   % Calculate correction for height of newline
   \setbox\subfiglist_box\vbox
