--- a/TODO
+++ b/TODO
@@ -10,6 +10,10 @@ TODO
 * Add change of meaning for `@' depending on catcode to known issues. Weird settings of catcodes e.g. for numbers may have strange effects
 * Remove \subfiglist_test_conditionals:
 * \subfiglist_tokenize_spec_str:VN -> \subfiglist_tokenize_spec_str:NV
+* Set \subfiglist_spec_canvas_nums by dependency injection
+* tempa -> tmpa in accordance with kernel docs
+* Replace wrapping commands by more general \subfiglist_tl_set_wrapped in parser and lexer
+* Add logging of canvas numbers to \subfiglist_setup_file:nnn
 
 
 
