--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -99,6 +99,9 @@
 \seq_new:N  \subfiglist_spec_str_seq
 \seq_new:N  \subfiglist_spec_tokens_seq
 
+\prop_new:N \subfiglist_canvas_prop
+\prop_new:N \subfiglist_temp_prop
+
 \int_new:N  \subfiglist_exit_count_int
 \int_new:N  \subfiglist_canvas_count_int
 \int_new:N  \subfiglist_tl_if_eq_charcode_int
@@ -567,6 +570,48 @@
 }
 
 \cs_generate_variant:Nn \subfiglist_tl_set_tail:Nn { NV }
+
+% Commands for wrapping tokens with braces and storing them in
+% a token list variable
+\cs_new:Npn \subfiglist_tl_set_wrapped:Nn #1 #2
+%
+% #1: Token list variable to be set
+% #2: First token
+%
+{
+  \tl_set:Nn #1 { { #2 } }
+}
+
+\cs_new:Npn \subfiglist_tl_set_wrapped:Nnn #1 #2 #3
+%
+% #1: Token list variable to be set
+% #2: First token
+% #3: Second token
+%
+{
+  \tl_set:Nn #1 { { { #2 } { #3 } } }
+}
+
+% Commands for transforming property lists into token lists
+% and vice versa
+\cs_new:Npn \subfiglist_tl_set_from_prop:NN #1 #2
+%
+% #1: Token list to be set
+% #2: Property list
+%
+{
+  \group_begin:
+    \tl_clear:N \subfiglist_tempa_tl
+
+    \prop_map_inline:Nn #2
+    {
+      \subfiglist_tl_set_wrapped:Nnn \subfiglist_tempb_tl { ##1 } { ##2 }
+      \tl_put_right:NV \subfiglist_tempa_tl \subfiglist_tempb_tl
+    }
+    \tl_set_eq:NN #1 \subfiglist_tempa_tl
+  \subfiglist_group_var_return:NN \tl_set:Nn #1
+  \group_end:
+}
 
 
 % Provide framework for exporting group scope local variables according to discussion
@@ -1844,6 +1889,58 @@
   \subfiglist_tl_if_eq:VVF #1 #2
   {
     \msg_warning:nn { subfiglist } { wrong~image~order }
+  }
+}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%   Canvas specification   %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\cs_new:Npn \subfiglist_setup_file:nnn #1 #2 #3
+%
+% #1: optional arguments
+% #2: image number
+% #3: image path
+%
+{
+  % Check if first argument is numeric
+  \subfiglist_is_integer:nF { #2 }
+  {
+    \msg_error:nnnn { subfiglist } { missing~number } { First } { \subfiglistfile }
+  }
+
+  % Check if first argument is in range
+  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
+  {
+    \msg_error:nnnV { subfiglist } { argument~out~of~range }
+      { #2 } \subfiglist_canvas_count_int
+  }{
+    % Save canvas type and image path
+    \prop_clear:N \subfiglist_temp_prop
+    \prop_put:Nnn \subfiglist_temp_prop { type } { file }
+    \prop_put:Nnn \subfiglist_temp_prop { path } { #3 }
+    
+    % Process opitonal arguments
+    \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistfile }
+    \keys_set:nn { subfiglistcanvas }
+      {
+        top    = \subfiglist_canvas_top_default_tl,
+        bottom = \subfiglist_canvas_bot_default_tl,
+        left   = \subfiglist_canvas_left_default_tl,
+        right  = \subfiglist_canvas_right_default_tl
+      }
+    \keys_set:nn { subfiglistcanvas } { #1 }
+    
+    % Save specified offsets
+    \prop_put:NnV \subfiglist_temp_prop { top }   \subfiglist_canvas_top_dim
+    \prop_put:NnV \subfiglist_temp_prop { bot }   \subfiglist_canvas_bot_dim
+    \prop_put:NnV \subfiglist_temp_prop { left }  \subfiglist_canvas_left_dim
+    \prop_put:NnV \subfiglist_temp_prop { right } \subfiglist_canvas_right_dim
+    
+    \subfiglist_tl_set_from_prop:NN \subfiglist_tempa_tl \subfiglist_temp_prop
+    \prop_put:NnV \subfiglist_canvas_prop { #2 } \subfiglist_tempa_tl
   }
 }
 
@@ -3357,47 +3454,6 @@
   \msg_error:nnn { subfiglist } { unexpected~command } { \subfiglistfile }
 }
 
-\cs_new:Npn \subfiglist_file_internal:nnn #1 #2 #3
-%
-% #1: optional arguments
-% #2: image number
-% #3: image path
-%
-{
-  % Check if first argument is numeric
-  \subfiglist_is_integer:nF { #2 }
-  {
-    \msg_error:nnnn { subfiglist } { missing~number } { First } { \subfiglistfile }
-  }
-
-  % Check if first argument is in range
-  \int_compare:nTF { #2 > \subfiglist_canvas_count_int }
-  {
-    \msg_error:nnff { subfiglist } { argument~out~of~range }
-      { #2 } { \int_use:N \subfiglist_canvas_count_int }
-  }{
-    % Process opitonal arguments
-    \tl_set:Nn \subfiglist_csname_tl { \exp_not:N \subfiglistfile }
-    \keys_set:nn { subfiglistcanvas }
-      {
-        top    = \subfiglist_canvas_top_default_tl,
-        bottom = \subfiglist_canvas_bot_default_tl,
-        left   = \subfiglist_canvas_left_default_tl,
-        right  = \subfiglist_canvas_right_default_tl
-      }
-    \keys_set:nn { subfiglistcanvas } { #1 }
-    % Save file name and image number
-    \tl_put_right:Nn \subfiglist_canvas_nums_tl { {#2} }
-    \tl_put_right:Nn \subfiglist_file_nums_tl   { {#2} }
-    \tl_put_right:Nn \subfiglist_file_names_tl  { {#3} }
-    % Save specified offsets
-    \tl_put_right:Nx \subfiglist_canvas_top_tl   { {\dim_use:N \subfiglist_canvas_top_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_bot_tl   { {\dim_use:N \subfiglist_canvas_bot_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_left_tl  { {\dim_use:N \subfiglist_canvas_left_dim} }
-    \tl_put_right:Nx \subfiglist_canvas_right_tl { {\dim_use:N \subfiglist_canvas_right_dim} }
-  }
-}
-
 \NewDocumentCommand \subfiglistfile { } { \subfiglist_file_error: }
 
 
@@ -3633,13 +3689,6 @@
 }
 
 
-\prg_new_conditional:Npnn \subfiglist_foo:n #1 { p, T, F, TF }
-{
-  \prg_return_true:
-}
-
-
-
 % Define environment subfiglist
 \NewDocumentEnvironment { subfiglist } { s O{ } m }
 %
@@ -3674,8 +3723,7 @@
     }
   }
 
-  % Save subfiglist specification
-  %\tl_set:Nn \subfiglist_spec_tl { #3 }
+  % Tokenize subfiglist specification
   \tl_clear:N \subfiglist_spec_canvas_nums_tl
   \seq_clear:N \subfiglist_spec_token_seq
   \subfiglist_tokenize_spec_str:nN { #3 } \subfiglist_spec_token_tl
@@ -3686,11 +3734,10 @@
     \subfiglist_spec_canvas_nums_sorted_tl
     \subfiglist_canvas_count_int
     
- % Parse subfiglist specification to get image numbers
-  \subfiglist_parse_nums:N \subfiglist_spec_tl
+ % Parse subfiglist specification
+  \subfiglist_parse_spec_tokens:VN \subfiglist_spec_token_tl \subfiglist_spec_tl
   
-  % Check if image numbers are valid
-  %\subfiglist_test_spec_nums:
+  \prop_clear:N \subfiglist_canvas_prop
   
   % Calculate correction for height of newline
   \setbox\subfiglist_box\vbox
@@ -3720,41 +3767,41 @@
   \RenewDocumentCommand \subfiglistoverlay { m m }
     { \subfiglist_overlay_internal:nn { ##1 } { ##2 } }
 }{
-  % Check if file numbers are valid
-  \subfiglist_test_canvas_nums:
-  
-  % Parse subfiglist specification and reverse
-  % resulting token lists afterwards
-  \int_zero:N \subfiglist_exit_count_int
-  \subfiglist_parse_objects:N \subfiglist_spec_tl
-  \tl_reverse:N \subfiglist_objects_pos_tl
-  \tl_reverse:N \subfiglist_objects_hoff_tl
-  \tl_reverse:N \subfiglist_objects_voff_tl
-  \tl_reverse:N \subfiglist_objects_ratio_tl
-  \tl_reverse:N \subfiglist_objects_cs_tl
-  \tl_reverse:N \subfiglist_objects_sub_blocks_tl
-  
-  % Calculate dimensions of subblocks
-  \subfiglist_get_sub_block_dimensions:
-  
-  % Calculate dimensions of images
-  \subfiglist_get_image_width:
-  
-  % Put everything inside a minipage
-  \begin{minipage}{\subfiglist_total_width_dim}
-    % Loop over top level objects
-    \int_zero:N \subfiglist_tempa_int
-    \tl_map_inline:Nn \subfiglist_objects_pos_tl
-    {
-      \int_incr:N \subfiglist_tempa_int
-
-      \int_compare:nT { \tl_count:n { ##1 } = 2 }
-      {
-        \tl_item:Nn \subfiglist_objects_cs_tl { \subfiglist_tempa_int }
-      }
-    }
-  \end{minipage}
-  
+%  % Check if file numbers are valid
+%  \subfiglist_test_canvas_nums:
+%  
+%  % Parse subfiglist specification and reverse
+%  % resulting token lists afterwards
+%  \int_zero:N \subfiglist_exit_count_int
+%  \subfiglist_parse_objects:N \subfiglist_spec_tl
+%  \tl_reverse:N \subfiglist_objects_pos_tl
+%  \tl_reverse:N \subfiglist_objects_hoff_tl
+%  \tl_reverse:N \subfiglist_objects_voff_tl
+%  \tl_reverse:N \subfiglist_objects_ratio_tl
+%  \tl_reverse:N \subfiglist_objects_cs_tl
+%  \tl_reverse:N \subfiglist_objects_sub_blocks_tl
+%  
+%  % Calculate dimensions of subblocks
+%  \subfiglist_get_sub_block_dimensions:
+%  
+%  % Calculate dimensions of images
+%  \subfiglist_get_image_width:
+%  
+%  % Put everything inside a minipage
+%  \begin{minipage}{\subfiglist_total_width_dim}
+%    % Loop over top level objects
+%    \int_zero:N \subfiglist_tempa_int
+%    \tl_map_inline:Nn \subfiglist_objects_pos_tl
+%    {
+%      \int_incr:N \subfiglist_tempa_int
+%
+%      \int_compare:nT { \tl_count:n { ##1 } = 2 }
+%      {
+%        \tl_item:Nn \subfiglist_objects_cs_tl { \subfiglist_tempa_int }
+%      }
+%    }
+%  \end{minipage}
+%  
   % Discard commands
   \RenewDocumentCommand \subfiglistfile {} { \subfiglist_file_error: }
   \RenewDocumentCommand \subfiglistlabel {} { \subfiglist_label_error: }
