--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -936,8 +936,8 @@ xxx
 %  \subfiglist_spec_canvas_nums_sorted_tl
 %  \subfiglist_canvas_count_int
 \begin{subfiglist}{ 1 @{asdf} {2} { 4 \\ 3 } \\[1ex] 5 }
-  \tl_show:N \subfiglist_spec_tl \error
-  \subfiglist_setup_file:nnn {} {1} {/path/to/image}
+%  \tl_show:N \subfiglist_spec_tl \error
+  \subfiglist_setup_file:nnn {} {1} { figures/01 }
   \prop_show:N \subfiglist_canvas_prop \error
 \end{subfiglist}
 \end{document}
